# massformer

./: .gitignore  LICENSE  README.md  algos.pyx  data_utils.py  dataset.py  explain.py  gf_data_utils.py  losses.py  misc_utils.py  model.py  mol_fix.py  parse_and_export.py  plot_utils.py  prepare_data.py  runner.py  setup.cfg  setup.py  sweep_runner.py
config/: cnn_cid_recomb_m2.yml  cnn_hcd_recomb_m2.yml  demo.yml  fp_cid_recomb_m2.yml  fp_hcd_recomb_m2.yml  gf_cid_recomb_m2.yml  gf_hcd_recomb_m2.yml  template.yml  wln_cid_recomb_m2.yml  wln_hcd_recomb_m2.yml
config/ablations/: ablations_large.yml  ablations_large_pt.yml  ablations_large_pt_ln.yml  ablations_small.yml  (+2 more)
download_scripts/: download_casmi_2016_proc.sh  download_casmi_2022_proc.sh  download_casmi_proc.sh  download_casmi_raw.sh  download_cfm_pred.sh  download_demo.sh  download_mona_raw.sh  download_nist20_outlier_proc.sh  download_nist_raw.txt  download_pcasmi_proc.sh  download_public.sh
env/: cpu.yml  cu101.yml  cu102.yml  requirements-cpu.txt  requirements-gpu.txt
licenses/: CFM_LICENSE  RETROSIM_LICENSE
predictions/: example_predictions.csv  example_smiles.csv
preproc_scripts/: mol_fix.py  parse_and_export.py  parse_cfm_output.py  prepare_casmi22_data.py  prepare_casmi_data.py  prepare_data.py  prepare_pcasmi_data.py
scripts/: compute_cfm_overlap.py  compute_ds_stats.py  compute_split_stats.py  compute_test_metrics.py  compute_test_ranks.py  plot_legends.py  plot_metrics.py  run_inference.py  run_train_eval.py  viz_preds.py
sweep/: cnn_sweep.yml  fp_sweep.yml  gf_sweep.yml  wln_sweep.yml
(+73 files in other folders)
