[metadata]
name = massformer
version = 0.2.0
license = BSD 2-Clause
description = Mass spectrum prediction for small molecules using graph transformers
long_description = file: README.md

[options]
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where=src
